Fix: Overlay for not showing scroll bars.
Got it from here https://css-tricks.com/the-css-overflow-property/

--- a/_sass/4-layouts/_home.scss
+++ b/_sass/4-layouts/_home.scss
@@ -38,7 +38,7 @@
   transform: scale(.5);
   z-index: -1;
   background: $blue-black;
-  overflow-y: auto;
+  overflow-y: visible;
   opacity: 0;
   &.active {
     transition: all .5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
